<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.app.opencity.fragments.CreateFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="top|center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:src="@drawable/logo"
            android:gravity="center"/>

        <LinearLayout
            android:layout_below="@id/title1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_form_rounded"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:text="Mehdi"
                android:hint="@string/name"
                android:padding="5dp"
                android:inputType="textNoSuggestions"
                android:singleLine="true" >
                <requestFocus />
            </EditText>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#CDCDCDFF" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:text="mehdi.chouag@gmail.com"
                android:hint="@string/email"
                android:padding="5dp"
                android:inputType="textNoSuggestions"
                android:singleLine="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#CDCDCDFF" />
            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="mehdi"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/create"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:background="@drawable/bg_button_rounded"
                android:textColor="@color/white"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
